--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@tiptap/starter-kit": "^2.0.3",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.1.0",
+    "jsonwebtoken": "8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
